Replaced OpenXLIFF with XMLJava